--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+verbose_modules = []
+
 [dependencies]
 cpal = "0.15.0"
 anyhow = "1.0.69"
