--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lion_synth"
-version = "0.1.0"
+version = "0.0.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,3 +12,9 @@ verbose_modules = []
 [dependencies]
 cpal = "0.15.0"
 anyhow = "1.0.69"
+log = "0.4.17"
+simplelog = { version = "0.12.1", features = ["paris"] }
+
+[dev-dependencies]
+log = "0.4.17"
+simplelog = "*"
