--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -10,13 +10,26 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-ubuntu:
 
     runs-on: ubuntu-latest
 
+    steps:
+    - uses: actions/checkout@v3
+    - name: Audio Dependency install (ALSA)
+      run: sudo apt-get -y install alsa_tools
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+      
+  build-windows:
+    runs-on: windows-latest
+  
     steps:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    
