--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Audio Dependency install (ALSA)
-      run: sudo apt-get -y install alsa-tools
+      run: sudo apt-get -y install libasound2-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
