--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ cpal = "0.15.0"
 anyhow = "1.0.69"
 log = "0.4.17"
 simplelog = { version = "0.12.1", features = ["paris"] }
+hound = "3.5.0"
 
 [dev-dependencies]
 log = "0.4.17"
