--- a/layouts/test.yaml
+++ b/layouts/test.yaml
@@ -11,8 +11,8 @@ layout:
       id: 1
       type: oscillator
       config:
-        name: test
-        frequency: 20.0
+        name: Carrier
+        frequency: 440.0
       auxiliaries:
         - aux:
             from-id: 2
@@ -23,4 +23,4 @@ layout:
       id: 2
       type: oscillator
       config:
-        name: carrier
+        name: Modulator
