--- a/layouts/poli3.yaml
+++ b/layouts/poli3.yaml
@@ -1,5 +1,6 @@
 ---
 version: 0.5
+# https://pages.mtu.edu/~suits/notefreqs.html
 
 layout:
   - module:
@@ -9,14 +10,18 @@ layout:
       input-from: 1
       config:
         name: master
-        input-amount: 2
+        input-amount: 3
         out-gain: 0.9
-        in-1: 0.5
-        in-2: 0.5
+        in-1: 0.3
+        in-2: 0.3
+        in-3: 0.3
       auxiliaries:
         - aux:
             from-id: 2
             linked-with: in2
+        - aux:
+            from-id: 3
+            linked-with: in3
   - module:
       id: 1
       type: oscillator
@@ -29,3 +34,9 @@ layout:
       config:
         name: "D5"
         frequency: 587.33
+  - module:
+      id: 3
+      type: oscillator
+      config:
+        name: "E5"
+        frequency: 659.25
