--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -18,18 +18,22 @@ jobs:
     - uses: actions/checkout@v3
     - name: Audio Dependency install (ALSA)
       run: sudo apt-get -y install libasound2-dev
-    - name: Build
+    - name: Build debug
       run: cargo build --verbose
+    - name: Build release
+      run: cargo build --release --verbose
     - name: Run tests
       run: cargo test --verbose
-      
+
   build-windows:
     runs-on: windows-latest
-  
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v3
+      - name: Build debug
+        run: cargo build --verbose
+      - name: Build release
+        run: cargo build --release --verbose
+      - name: Run tests
+        run: cargo test --verbose
     
