--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ hound = "3.5.0"
 yaml-rust = "0.4.4"
 ringbuf = "0.3.3"
 crossbeam = "0.8.2"
+thiserror = "1.0.40"
 
 [dev-dependencies]
 log = "0.4.17"
